--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "description": "A script to organize your downloads folder in the background",
   "main": "app.js",
-  "bin": "app.js",
+  "bin": "./dist/bundle.js",
   "scripts": {
     "start": "node ./app.js",
-    "build": "pkg . --targets node18-win-x64 --download-organizer.exe"
+    "build": "pnpm bundle && pkg . --targets node18-win-x64 --output ./dist/download-organizer.exe --no-bytecode",
+    "bundle": "esbuild app.js --bundle --platform=node --target=node18 --outfile=dist/bundle.js --format=cjs"
   },
   "keywords": [
     "download",
@@ -20,6 +21,7 @@
     "chokidar": "^5.0.0"
   },
   "devDependencies": {
+    "esbuild": "^0.27.0",
     "pkg": "^5.8.1"
   }
 }
